--- a/Task_13/letsencript.yaml
+++ b/Task_13/letsencript.yaml
@@ -4,13 +4,14 @@ metadata:
   name: letsencrypt-prod
 spec:
   acme:
-    # Email address used for ACME registration
-    email: iromasparrow@gmail.com
     # The ACME server URL
     server: https://acme-v02.api.letsencrypt.org/directory
+    # Email address used for ACME registration
+    email: iromasparrow@gmail.com
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
       name: letsencrypt-prod
+    # Enable the HTTP-01 challenge provider
     solvers:
     - http01:
         ingress:
