--- a/task_14/nginx/templates/ingress.yaml
+++ b/task_14/nginx/templates/ingress.yaml
@@ -10,7 +10,7 @@ spec:
   tls:
   - hosts:
     - {{ .Values.domain }}
-    secretName: app-tls
+    secretName: oneapp-tls
   rules:
   - host: {{ .Values.domain }}
     http:
