--- a/task_14/nginx/values.yaml
+++ b/task_14/nginx/values.yaml
@@ -1,8 +1,6 @@
-# Deployment values
 replicaCount: 3
 container:
   image: nginx:latest
   port: 80
-domain: sparrow.v6.rocks
-# Ingress
+domain: glsparrow.v6.navy
 issuerName: letsencrypt-prod
