--- a/task_14/nginx/templates/ingress.yaml
+++ b/task_14/nginx/templates/ingress.yaml
@@ -1,24 +1,26 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}-ingress
+  name: {{ .Release.Name }}
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
-    cert-manager.io/issuer: {{ .Values.issuerName | quote }}
+    cert-manager.io/issuer: "letsencrypt-prod"
+
 spec:
   tls:
   - hosts:
-    - {{ .Values.domain }}
-    secretName: oneapp-tls
+    - {{ .Values.host }}
+    secretName: nginxapp-tls
   rules:
-  - host: {{ .Values.domain }}
+  - host: {{ .Values.host }}
     http:
       paths:
       - path: /{{ .Release.Name }}
         pathType: Prefix
         backend:
-          service: 
+          service:
             name: {{ .Release.Name }}-service
             port:
               number: 80
+
