--- a/task_14/nginx/Chart.yaml
+++ b/task_14/nginx/Chart.yaml
@@ -1,5 +1,8 @@
 apiVersion: v2
-name       : nginx
+name       : Nginx
+description: My Nginx for Kubernetes
 type       : application
 version    : 0.1.0
-appVersion : "1.1"
+appVersion : "1.0"
+
+
