--- a/task_14/nginx/templates/service.yaml
+++ b/task_14/nginx/templates/service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: {{ .Release.Name }}-service
 spec:
-  selector:
-{{ include "nginxchart.labels" . | indent 4 }}
   ports:
   - name: http
     port: 80
     protocol: TCP
-    targetPort: {{ .Release.Name }}-http
+    targetPort: 80
+  selector:
+    app: {{ .Release.Name }}
