--- a/task_14/pacman/Chart.yaml
+++ b/task_14/pacman/Chart.yaml
@@ -1,5 +1,8 @@
 apiVersion: v2
-name       : pacman
+name       : Pacman
+description: My Pacman for Kubernetes
 type       : application
 version    : 0.1.0
-appVersion : "1.1"
+appVersion : "1.0.0"
+
+
