--- a/task_14/nginx/templates/ingress.yaml
+++ b/task_14/nginx/templates/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   tls:
   - hosts:
     - {{ .Values.host }}
-    secretName: nginxapp-tls
+    secretName: app-tls
   rules:
   - host: {{ .Values.host }}
     http:
