--- a/task_14/pacman/templates/ingress.yaml
+++ b/task_14/pacman/templates/ingress.yaml
@@ -10,7 +10,7 @@ spec:
   tls:
   - hosts:
     - {{ .Values.host }}
-    secretName: pacmanapp-tls
+    secretName: app-tls
   rules:
   - host: {{ .Values.host }}
     http:
