--- a/task_14/pacman/templates/ingress.yaml
+++ b/task_14/pacman/templates/ingress.yaml
@@ -4,13 +4,13 @@ metadata:
   name: {{ .Release.Name }}
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: "letsencrypt-prod"
+    cert-manager.io/issuer: "letsencrypt-stage"
 
 spec:
   tls:
   - hosts:
     - {{ .Values.host }}
-    secretName: app-tls
+    secretName: someapp-tls
   rules:
   - host: {{ .Values.host }}
     http:
