--- a/task_14/pacman/templates/ingress.yaml
+++ b/task_14/pacman/templates/ingress.yaml
@@ -15,7 +15,7 @@ spec:
   - host: {{ .Values.host }}
     http:
       paths:
-      - path: /{{ .Release.Name }}
+      - path: /
         pathType: Prefix
         backend:
           service:
