--- a/task_14/nginx/templates/ingress.yaml
+++ b/task_14/nginx/templates/ingress.yaml
@@ -1,26 +1,23 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Release.Name }}
+  name: {{ .Release.Name }}-ingress
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    cert-manager.io/issuer: "letsencrypt-stage"
-
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
   - hosts:
     - {{ .Values.host }}
-    secretName: someapp-tls
+    secretName: nginxapp-tls
   rules:
-  - host: {{ .Values.host }}
-    http:
-      paths:
-      - pathType: Prefix
-        path: /{{ .Release.Name }}
-        backend:
-          service:
-            name: {{ .Release.Name }}-service
-            port:
-              number: 80
-
+   - host: {{ .Values.host }}
+     http:
+        paths:
+          - pathType: Prefix
+            path: /
+            backend:
+              service:
+                name: {{ .Release.Name }}-service
+                port: 
+                  number: 80
