--- a/task_14/pacman/templates/service.yaml
+++ b/task_14/pacman/templates/service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: {{ .Release.Name }}-service
 spec:
-  ports:
-  - name: http
-    port: 80
-    protocol: TCP
-    targetPort: 80
+  type: ClusterIP
   selector:
     app: {{ .Release.Name }}
+  ports:
+    - name: {{ .Release.Name }}-ports
+      protocol: TCP
+      port: 80
+      targetPort: 80
