--- a/task_15/ansible/roles/deploy/files/wordpress/templates/ingress.yaml
+++ b/task_15/ansible/roles/deploy/files/wordpress/templates/ingress.yaml
@@ -4,8 +4,12 @@ metadata:
   name: {{ .Release.Name }}
   annotations:
     kubernetes.io/ingress.class: "nginx"
-
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
+  tls:
+  - hosts:
+    - {{ .Values.host }}
+    secretName: app-tls
   rules:
   - host: {{ .Values.host }}
     http:
