--- a/task_15/ansible/roles/deploy/tasks/main.yml
+++ b/task_15/ansible/roles/deploy/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install helm with option --classic
+- name: Install helm
   community.general.snap:
     name: helm
     classic: true
@@ -19,6 +19,10 @@
   ansible.builtin.file:
     path: .kube/config
     mode: '0777'
+
+- name: Deploy cert-manager
+  ansible.builtin.shell:
+    cmd: kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.11.0/cert-manager.yaml
 
 - name: Copy wp-config
   ansible.builtin.copy:
