--- a/task_15/ansible/roles/deploy/files/wordpress/templates/ingress.yaml
+++ b/task_15/ansible/roles/deploy/files/wordpress/templates/ingress.yaml
@@ -3,13 +3,13 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 spec:
   tls:
   - hosts:
     - {{ .Values.host }}
-    secretName: app-tls
+    secretName: nginx-tls
   rules:
   - host: {{ .Values.host }}
     http:
